--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "4.3.1",
+    "@prisma/client": "^4.16.0",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -21,7 +21,7 @@
     "eslint": "8.23.0",
     "eslint-config-next": "12.3.0",
     "prettier": "^2.7.1",
-    "prisma": "4.3.1",
+    "prisma": "^4.16.0",
     "typescript": "4.8.3"
   }
 }
